--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 .main {
-  margin-top: 10rem;
+  margin-top: 100px;
   background-color: var(--color-white);
   padding: 3.2rem;
   border-radius: 12px;
