--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,9 @@ Greys:
 }
 
 html {
-  font-size: 62.5%;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  font-size: 62.5%;
 }
 
 body {
@@ -98,6 +98,10 @@ body {
 
 .input::placeholder{
     color: var(--color-smokey-grey);
+}
+
+.input:hover{
+  border: 1px solid var(--color-off-black);
 }
 
 .title{
